--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,8 @@ stages:
       runOnce:
         deploy:
           steps:
+          - download: current
+            artifact: manifests
           - task: KubernetesManifest@0
             displayName: Create imagePullSecret
             inputs:
